test/files/semantic/reject/var_redef_param_to_local.neo
func f(x: string)
    let x: int = 10
end